--- a/TA-Lib.vcxproj
+++ b/TA-Lib.vcxproj
@@ -81,16 +81,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="base\TA_Exception.h" />
+    <ClInclude Include="indicator\TA_DX.h" />
+    <ClInclude Include="indicator\TA_LINEARREG.h" />
+    <ClInclude Include="indicator\TA_MA.h" />
     <ClInclude Include="TA_Abstract_Param.h" />
-    <ClInclude Include="TA_Exception.h" />
     <ClInclude Include="TA_Lib.h" />
-    <ClInclude Include="TA_LINEARREG.h" />
-    <ClInclude Include="TA_MA.h" />
     <ClInclude Include="TA_Out.h" />
     <ClInclude Include="TA_Param.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TA_Exception.cpp" />
+    <ClCompile Include="base\TA_Exception.cpp" />
     <ClCompile Include="TA_Lib.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
