--- a/TA-Lib.vcxproj
+++ b/TA-Lib.vcxproj
@@ -82,6 +82,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="base\TA_Exception.h" />
+    <ClInclude Include="base\TA_Util.h" />
     <ClInclude Include="indicator\TA_DX.h" />
     <ClInclude Include="indicator\TA_LINEARREG.h" />
     <ClInclude Include="indicator\TA_MA.h" />
@@ -93,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="base\TA_Exception.cpp" />
+    <ClCompile Include="TA_Abstract_Param.cpp" />
     <ClCompile Include="TA_Lib.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
